--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
     <modules>
         <module>cabot-game-engine</module>
+        <module>cabot-machine-learning</module>
     </modules>
 
     <dependencies>
@@ -68,6 +69,14 @@
             <artifactId>fest-reflect</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -76,6 +85,11 @@
             <dependency>
                 <groupId>com.cegeka.cabot</groupId>
                 <artifactId>cabot-game-engine</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cegeka.cabot</groupId>
+                <artifactId>cabot-machine-learning</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
