--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <modules>
         <module>cabot-game-engine</module>
         <module>cabot-machine-learning</module>
+        <module>cabot-ui</module>
     </modules>
 
     <dependencies>
@@ -90,6 +91,11 @@
             <dependency>
                 <groupId>com.cegeka.cabot</groupId>
                 <artifactId>cabot-machine-learning</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cegeka.cabot</groupId>
+                <artifactId>cabot-ui</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -234,4 +240,12 @@
             </resource>
         </resources>
     </build>
+
+    <repositories>
+        <repository>
+            <!-- DO NOT set id to "local" because it is reserved by Maven -->
+            <id>lib</id>
+            <url>file://C:\dvl.home\mvn-repos</url>
+        </repository>
+    </repositories>
 </project>
