NielsJ: more ui

--- a/cabot-ui/pom.xml
+++ b/cabot-ui/pom.xml
@@ -17,6 +17,27 @@
             <artifactId>opencv</artifactId>
             <version>2411</version>
         </dependency>
+        <dependency>
+            <groupId>com.cegeka.cabot</groupId>
+            <artifactId>cabot-game-engine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.10</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
